<resources>
    <string name="app_name">E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_lafyuu">Welcome to E-Commerce</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_email">Your Email</string>
    <string name="icon_email">Icon Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_account">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="icon_app">Icon App</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="full_name">Full Name</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Have a Account ?</string>
    <string name="loading">Loading</string>
</resources>