<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.egycode.e_commerce.ui.auth.viewmodel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.fragment.RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/icon_app"
                android:src="@drawable/logo_blue" />

            <TextView
                style="@style/TextTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/let_s_get_started" />

            <TextView
                style="@style/TextBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/create_an_new_account" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_text_full_name_register"
                style="@style/TextFiledNormal"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.fullName}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_text_email_register"
                style="@style/TextFiledNormal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:drawableStart="@drawable/icon_email"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_text_password_register"
                style="@style/TextFiledNormal"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/icon_lock"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.password}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_text_password_again_register"
                style="@style/TextFiledNormal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:drawableStart="@drawable/icon_lock"
                android:hint="@string/password_again"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.passwordAgain}" />

            <Button
                android:id="@+id/button_sign_in"
                style="@style/ButtonLarge"
                android:layout_margin="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_up" />


            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextBodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account" />

                <TextView
                    style="@style/TextTitleSmallBlue"
                    android:paddingStart="5dp"
                    android:text="@string/sign_in"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</layout>