<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.egycode.e_commerce.ui.auth.viewmodel.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.auth.fragment.LoginFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="@color/white"
                android:contentDescription="@string/icon_app"
                android:src="@drawable/logo_blue" />

            <TextView
                style="@style/TextTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_to_lafyuu" />

            <TextView
                style="@style/TextBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in_to_continue" />

            <EditText
                android:id="@+id/ed_text_email_login"
                style="@style/TextFiledNormal"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/icon_email"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}" />


                <EditText
                    android:id="@+id/ed_text_password_login"
                    style="@style/TextFiledNormal"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:drawableStart="@drawable/icon_lock"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}" />


            <Button
                android:id="@+id/button_sign_in"
                style="@style/ButtonBlueStyle"
                android:layout_margin="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_bold"
                android:onClickListener="@{() -> viewmodel.login()}"
                android:text="@string/sign_in" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/neutralLight" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/neutralGery"
                    android:textSize="14sp" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_login_with_google"
                style="@style/ButtonWhiteStyle"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/icon_google"
                android:text="@string/login_with_google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_login_with_facebook"
                style="@style/ButtonWhiteStyle"
                android:layout_marginHorizontal="16dp"
                android:drawableStart="@drawable/icon_facebook"
                android:text="@string/login_with_facebook" />


            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/primaryColor" />

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/dont_have_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingStart="5dp"
                    android:text="@string/register"
                    android:textColor="@color/primaryColor"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>
